add application head tag
application fileがなぜ読み込まれないのか不明。

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,16 @@
+<div class="header">
+  <div class="header_right_contents">
+    <p class="header_title">You</p>
+  </div>
+  <div>
+    <p class="header_new">新規登録</p>
+    <p class="header_new">ログイン</p>
+    <p class="header_new">新規登録</p>
+  </div>
+</div>
+
 <div class="common-header">
-<h2 class="one">1</h2>
+<h2 class="one">こんにちは</h2>
 <h2>1</h2>
 <h2>1</h2>
 </div>
